# presenton

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  start.js  test-local.sh
.do/: deploy.template.yaml
electron/: .gitignore  (+5 more)
servers/fastapi/: mcp_server.py  migrations.py  openai_spec.json  pyproject.toml  server.spec
servers/fastapi/alembic/: env.py
servers/fastapi/alembic/versions/: 95b5127e93cd_template_create_info.py  a9da80da9051_add_video_studio_tables.py  c7b70d0f31b1_added_chat_history_messages_table.py  f42ad4074449_add_theme_column_to_presentations.py
servers/fastapi/api/: main.py  middlewares.py
servers/fastapi/api/v1/auth/: router.py
servers/fastapi/api/v1/ppt/: router.py
servers/fastapi/api/v1/ppt/endpoints/: anthropic.py  google.py  icons.py  openai.py  pptx_slides.py  presentation.py  prompts.py  slide.py  slide_to_html.py
servers/fastapi/api/v1/video_studio/: router.py
servers/fastapi/constants/: llm.py  presentation.py
servers/fastapi/enums/: image_provider.py  llm_provider.py
servers/fastapi/models/: generate_presentation_request.py  mp4_export_request.py  presentation_from_template.py  user_config.py
servers/fastapi/models/sql/: video_project.py  video_render_job.py
servers/fastapi/presenton_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servers/fastapi/services/: database.py  document_conversion_service.py  documents_loader.py  export_task_service.py  html_video_renderer.py  icon_finder_service.py  image_generation_service.py  liteparse_service.py  mem0_oss_memory.py  office_document_service.py  temp_file_service.py  tts_service.py  video_export_service.py  video_studio_service.py  youtube_upload_service.py
servers/fastapi/services/chat/: memory_layer.py  prompts.py  schemas.py  service.py  tools.py
servers/fastapi/templates/: fonts_and_slides_preview.py  get_layout_by_name.py  handler.py  layout_code_validation.py  pptx_font_utils.py  presentation_layout.py  providers.py
servers/fastapi/tests/: test_image_generation_openai_compatible.py  test_mem0_presentation_memory_service.py  test_pptx_font_utils.py  test_srt_utils.py  test_tts_service.py  test_video_export_service.py  test_video_studio.py
servers/fastapi/tests/integration/: test_auth_endpoints.py  test_images_endpoints.py  test_presentation_generation_flow.py
servers/fastapi/tests/unit/: test_available_models.py  test_documents_loader.py  test_icon_weights.py  test_image_generation_errors.py  test_mcp_openapi_templates.py  test_mcp_server_auth.py  test_migrations.py  test_model_availability_errors.py  test_office_document_service.py  test_runtime_limits.py  test_small_surfaces_coverage.py  test_temp_file_service_security.py  test_template_layout_code_validation.py  test_template_providers.py  test_user_config_store.py
servers/fastapi/utils/: available_models.py  db_utils.py  export_utils.py  get_env.py  icon_weights.py  image_generation_error.py  image_provider.py  llm_client_error_handler.py  llm_config.py  llm_provider.py  model_availability.py  process_slides.py  runtime_limits.py  set_env.py  simple_auth.py  srt_utils.py  template_vision_errors.py  user_config.py  user_config_store.py  youtube_config.py
servers/fastapi/utils/llm_calls/: generate_presentation_outlines.py  generate_presentation_structure.py  select_slide_type_on_edit.py
servers/fastapi/utils/oauth/: youtube.py
(+228 files in other folders)
